Fix documentation container alignment

--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -13,7 +13,6 @@ header.postHeader:empty + article h1 {
 }
 
 .mainContainer {
-  padding-top: 24px;
   padding-bottom: 24px;
 }
 
